--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chat-hdp",
+  "homepage": "http://chathdp.terminalkiller.site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +13,7 @@
     "@types/node": "20.0.0",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.4",
+    "gh-pages": "^5.0.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
