--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.0.0",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.5.0",
     "gh-pages": "^5.0.0",
     "next": "13.4.1",
     "react": "18.2.0",
