--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "bit": "^1.0.20",
     "cohere-ai": "^6.2.2",
+    "mongoose": "^7.5.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
